--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+      @font-face {
+        font-family: "Josefin Sans";
+        src: url("./fonts/JosefinSans-VariableFont_wght.ttf") format("truetype");
+        /* Specify the correct path to the Josefin Sans font file */
+        font-style: normal;
+        font-weight: normal;
+      }
+
+      body {
+        font-family: "Josefin Sans", sans-serif;
+        /* Apply the Josefin Sans font to the body or any desired elements */
+      }
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
